# fct_qt_driver_db_distributed

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
build-newPluginDB-Desktop_Qt_6_5_1_GCC_64bit-Debug/: CMakeCache.txt.prev  basedados.db  build.ninja  cmake_install.cmake  newPluginDB
build-newPluginDB-Desktop_Qt_6_5_1_GCC_64bit-Debug/newPluginDB_autogen/: deps  moc_predefs.h
build-newPluginDB-Desktop_Qt_6_5_1_GCC_64bit-Debug/newPluginDB_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-newPluginDB-Desktop_Qt_6_5_1_GCC_64bit-Debug/newPluginDB_autogen/include/: main.moc  main.moc.d  ui_mainwindow.h
build-newPluginDB-Desktop_Qt_6_5_1_GCC_64bit-Debug/node1/: raft.db
build-newPluginDB-Desktop_Qt_6_5_1_GCC_64bit-Debug/node2/: raft.db
build-newPluginDB-Desktop_Qt_6_5_1_GCC_64bit-Debug/node3/: raft.db
